using `.valueov()` instead of constructor for doubles and floats